[package]
name = "rust-mdr"
version = "0.1.0"
authors = ["Jake Gully <chimpytk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
termimad = "0.8.30"
crossterm = "0.17.7"
minimad = "0.6.7"
reqwest = { version = "0.10", features = ["blocking"] }
